--- a/styles-desktop.css
+++ b/styles-desktop.css
@@ -5,7 +5,7 @@ body {
 }
 
 /* Header */
-#hero-header-wrapper {
+#banner-container {
     background-image: url(/images/background.png);
     background-size: cover;
     width: 100%;
