--- a/styles-mobile.css
+++ b/styles-mobile.css
@@ -259,9 +259,11 @@ a.menu-link {
 .pentagon-subheading {
     font-size: 12px;
     font-weight: 400;
+    width: 100%;
     color: #FFFFFF;
     position: relative;
     top: -1rem;
+    margin-left: 5%;
 }
 
 #contact-us {
