--- a/styles-mobile.css
+++ b/styles-mobile.css
@@ -231,7 +231,7 @@ a.menu-link {
 
 .pentagon {
     position: relative;
-    margin-left: 90px;
+    margin-left: 85px;
 }
 
 .pentagon-image {
@@ -364,7 +364,7 @@ a.menu-link {
     font-weight: 400;
     color: rgba(255, 255, 255, 0.4);
     text-align: center;
-    margin-top: 10%%;
+    margin-top: 10%;
 }
 
 .holberton_school-icon-ic_sound,
