--- a/styles-mobile.css
+++ b/styles-mobile.css
@@ -187,6 +187,7 @@ a.menu-link {
 #results-section {
     background-image: url(/images/background2.png);
     background-size: cover;
+    background-position: center;
     width: auto;
     display: flex;
     flex-direction: column;
@@ -196,7 +197,7 @@ a.menu-link {
 }
 
 #results-text-container {
-    width: 80%;
+    width: 75%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -208,6 +209,7 @@ a.menu-link {
     color: #FFFFFF;
     font-size: 32px;
     font-weight: 600;
+    width: 80%;
 }
 
 #results-subheading {
@@ -227,15 +229,16 @@ a.menu-link {
 
 .pentagon-container {
     position: relative;
+    margin-left: 15%;
 }
 
 .pentagon {
     position: relative;
-    margin-left: 75px;
+    margin-left: 65px;
 }
 
 .pentagon-image {
-    width: 75%;
+    width: 65%;
     height: auto;
     max-width: 100%;
     display: block;
@@ -244,7 +247,7 @@ a.menu-link {
 .text-overlay {
     position: absolute;
     top: 60%; 
-    left: 32%;
+    left: 27%;
     transform: translate(-50%, -50%);
     text-align: center;
 }
@@ -258,13 +261,13 @@ a.menu-link {
 }
 
 .pentagon-subheading {
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 400;
     width: 100%;
     color: #FFFFFF;
     position: relative;
     top: -1rem;
-    margin-left: 15%;
+    margin-left: 11%;
 }
 
 #contact-us {
